<resources>
    <string name="app_name">kadai12</string>
    <string name="tv_title">必要な情報を入力してください</string>
    <string name="tv_name">名前</string>
    <string name="tv_home">タイトル</string>
    <string name="tv_mail">メールアドレス</string>
    <string name="tv_comment">質問内容</string>
    <string name="bt_confirm">確認</string>
    <string name="bt_send">送信</string>
    <string name="bt_clear">クリア</string>

    <string name="app_name2">リスト選択サンプル２</string>
    <string name="dialog_title">注文確認</string>
    <string name="dialog_msg">選択された定食を注文します。よろですか</string>
    <string name="dialog_btn_ok">注文</string>
    <string name="dialog_btn_ng">キャンセル</string>
    <string name="dialog_btn">問い合わせ</string>
    <string name="dialog_ok_toast">ご注文ありがとうございました。</string>
    <string name="dialog_ng_toast">ご注文をキャンセルしますか。</string>
    <string name="dialog_nu_toast">お問い合わせ内容をお知らせしてください</string>
</resources>